--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
 		vertical-align: top;
 		border: 2px solid black;
 		margin: 5px;
+		width: 99%;
 	}
 
 	.three-cell{
@@ -374,16 +375,16 @@
 		</div>
 
 		<div class="case-study-box">
-			<h4>Case Study</h4>
+			<h4>UI/UX, User Research</h4>
 			<p class="case-study-text"><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
 		</div>
 
 		<div class="case-study-box">
-			<h4>Case Study</h4>
+			<h4>UI/UX Design</h4>
 			<p class="case-study-text"><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
 		</div>
 
-		<div class="project-boxes">
+<!-- 		<div class="project-boxes">
 			<h4>Coded Work</h4>
 			<p class="case-study-text"><a href="/projects/divpixels/" class="contentlinks">divPixels</a>&mdash;An easy to use, browser-based pixel art tool, built as a weekend project in JavaScript.</p>
 			<p class="case-study-text"><a href="/projects/whitewithred/" class="contentlinks">White with Red</a>&mdash;Illustrations accompanying a short horror story of the same name, made interactive and built with SVG animations.</p>
@@ -396,7 +397,7 @@
 			<p class="case-study-text"><a href="/projects/american-classics/" class="contentlinks">An Anthology of American Classics</a>&mdash;A compilation of four volumes of classic American literature, designed and bound within the same book.</p>
 			<p class="case-study-text"><a href="/projects/uss-maine/" class="contentlinks">USS Maine Memorial Booklet</a>&mdash;A booklet describing the history of the USS Maine, its destruction, the beginning of the Spanish-American War, and an analysis of the monument built to commemorate it.</p>
 			<p class="case-study-text"><a href="/projects/arroz-blanco/" class="contentlinks">Arroz Blanco</a>&mdash;A t-shirt and sticker line made for Puerto Rico Comic-Con, designed as a cross between Puerto Rican and otaku culture.</p>
-		</div>
+		</div> -->
 
 		<p style="font-size: 0.5em;margin: 30px 0 0 0;font-weight: 600; text-align: center;">Designed and coded by Alberto Guillermo de la Cruz</p>
 	</div>
