--- a/index.html
+++ b/index.html
@@ -221,11 +221,10 @@
 
 	.case-study-box{
 		position: relative;
-		display: inline-block;
+		display: flex;
 		vertical-align: top;
 		border: 2px solid black;
 		margin: 5px;
-		width: 99%;
 	}
 
 	.three-cell{
