--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 		display: flex;
 		vertical-align: top;
 		border: 2px solid black;
-		margin: 5px;
+		margin: 10px;
 	}
 
 	.three-cell{
@@ -373,7 +373,7 @@
 			</div>
 		</div>
 
-		<div class="case-study-box">
+		<div class="case-study-box" style="margin-bottom: 10px;">
 			<h4>UI/UX, User Research</h4>
 			<p class="case-study-text"><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
 		</div>
