--- a/projects/arithmatic/index.html
+++ b/projects/arithmatic/index.html
@@ -155,7 +155,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/mult
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/div.png" style="max-width: 350px;">
 <p>Purple for Division</p>
-<p>The monochromatic color scheme of the game makes selected color truly stand out, and makes it all the more shocking when it’s Game Over and the screen turns to black.</p>
+<p>The monochromatic color scheme of the game makes the selected color truly stand out, and makes it all the more shocking when it’s Game Over and the screen turns to black.</p>
 <img src="  
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/game-over.png" style="max-width: 350px;">
 <p>The game also comes with iOS Game Center integration, so users can check their scores and compete with one another.</p>
