--- a/index.html
+++ b/index.html
@@ -373,14 +373,19 @@
 			</div>
 		</div>
 
-		<div class="case-study-box" style="margin-bottom: 20px;">
-			<h4>UI/UX, User Research</h4>
-			<p class="case-study-text"><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
-		</div>
-
-		<div class="case-study-box">
-			<h4>UI/UX Design</h4>
-			<p class="case-study-text"><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
+		<div class="flex-container">
+			<div class="case-study-box three-cell">
+				<h4>Type Design &amp; Font Development</h4>
+				<p class="case-study-text"><a class="contentlinks" href="/projects/golden-dragon/">Golden Dragon Font Family</a>&mdash;An open-source display font family based on the classic poster from <em>Enter the Dragon</em>.</p>
+			</div>
+			<div class="case-study-box three-cell">
+				<h4>UI/UX &amp; User Research</h4>
+				<p class="case-study-text"><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
+			</div>
+			<div class="case-study-box three-cell">
+				<h4>UI/UX Design</h4>
+				<p class="case-study-text"><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
+			</div>
 		</div>
 
 <!-- 		<div class="project-boxes">
