--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 			</div>
 			<div class="case-study-box three-cell">
 				<h4>UI/UX Design</h4>
-				<p class="case-study-text"><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge as a part of Alice's backend hotel management solution.</p>
+				<p class="case-study-text"><a class="contentlinks" href="/projects/alice-crm/">Alice Concierge CRM</a>&mdash;A customer relationship management system designed for hotel concierge.</p>
 			</div>
 		</div>
 
