--- a/projects/golden-dragon/index.html
+++ b/projects/golden-dragon/index.html
@@ -140,9 +140,9 @@
 <div class="img-container">
 <h3>Golden Dragon Font Family</h3>
 <p>In October, I was asked to produce graphics for New York Asian Film Festival's Old School Kung Fu Fest. I wanted to make a simple, clean type-driven logo taking inspiration from classic posters of the era. I really liked the letterforms found on the poster of <em>Enter the Dragon</em> and used them as a base for the letters I'd need from the logo.</p>
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/golden-dragon/oldschool-logo.png" style="width: 468px;">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/golden-dragon/oskff.png" style="width: 370px;">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/golden-dragon/oskff-monthly.png" style="width: 486px;">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/golden-dragon/oldschool-logo.png" style="max-width: 468px;">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/golden-dragon/oskff.png" style="max-width: 370px;">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/golden-dragon/oskff-monthly.png" style="max-width: 486px;">
 <p>I ended really liking the look of these letters and designed an entire 215 character font family, building a font using an open-source program called <a href="https://fontforge.github.io/en-US/" class="contentlinks">FontForge</a>.</p>
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/golden-dragon/gdsolid.png">
 I also designed alternate styles, an Outline and a Shadow version.
