--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
 		<div class="flex-container">
 			<div class="case-study-box three-cell">
-				<h4>Type Design &amp; Font Development</h4>
+				<h4>Font Design</h4>
 				<p class="case-study-text"><a class="contentlinks" href="/projects/golden-dragon/">Golden Dragon Font Family</a>&mdash;An open-source display font family based on the classic poster from <em>Enter the Dragon</em>.</p>
 			</div>
 			<div class="case-study-box three-cell">
