--- a/projects/golden-dragon/index.html
+++ b/projects/golden-dragon/index.html
@@ -148,7 +148,7 @@
 I also designed alternate styles, an Outline and a Shadow version.
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/golden-dragon/gdoutline.png">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/golden-dragon/gd-shadow.png">
-<p>You can download and potentially even contribute to the font family <a href="https://github.com/AGdelaX/golden-dragon" class="contentlinks">here</a>.</p>
+<p>You can download the font family <a href="https://github.com/AGdelaX/golden-dragon" class="contentlinks">here</a>.</p>
 </div>
 
 <script type="text/javascript">
