--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 			</div>
 			<div class="case-study-box three-cell">
 				<h4>UI/UX &amp; User Research</h4>
-				<p class="case-study-text"><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for the large range of ArtBinder's customers and products.</p>
+				<p class="case-study-text"><a class="contentlinks" href="/projects/artbinder-personas/">ArtBinder Personas</a>&mdash;Persona development and user research for ArtBinder's customers and products.</p>
 			</div>
 			<div class="case-study-box three-cell">
 				<h4>UI/UX Design</h4>
