--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 padding: 2vmin 1vmin 2vmin 2vmin;
                 background-color: #FAFAFA;
                 color: #4A4A4A;
-                font-family: "Comic Sans MS", "Comic Sans", "Chalkboard", "ChalkboardSE-Regular", sans-serif;
+                font-family: "Comic Sans MS", "Comic Sans", "Chalkboard", "ChalkboardSE-Regular", "Marker Felt", sans-serif;
             }
             #text{
                 font-size: 7vmin;
