--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
                 background: yellow;
                 color: #292929;
             }
+            .nobreak{
+            	white-space: nowrap;
+            }
         </style>
     </head>
     <body>
         <p class="smaller"><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></p>
-        <p id="text">I'm a <span style="word-wrap: keep-all;">designer/developer/illustrator</span> and the founder of <a href="http://tokeninteractive.com">Token Interactive</a>&mdash;a games and interactive media studio. Before that I was the Lead Product Designer at <a href="http://stayawhile.com">Stayawhile</a> and <em>before that</em> I designed for a few New York City startups like <a href="http://artbinder.com">ArtBinder</a> and <a href="http://aliceapp.com">Alice</a>. Outside of work I like anime, craft beer, video/tabletop games and creepy stories.</p>
+        <p id="text">I'm a <span style="word-wrap: keep-all;"><span class="nobreak">designer</span>/<span class="nobreak">developer</span>/<span class="nobreak">illustrator</span></span> and the founder of <a href="http://tokeninteractive.com">Token Interactive</a>&mdash;a games and interactive media studio. Before that I was the Lead Product Designer at <a href="http://stayawhile.com">Stayawhile</a> and <em>before that</em> I designed for a few New York City startups like <a href="http://artbinder.com">ArtBinder</a> and <a href="http://aliceapp.com">Alice</a>. Outside of work I like anime, craft beer, video/tabletop games and creepy stories.</p>
         <p class="smaller"><a href="https://medium.com/@albertodelacruz">Medium</a>, <a href="http://twitter.com/agdelax">Twitter</a>, <a href="http://dribbble.com/albertosoft">Dribbble</a>, <a href="http://linkedin.com/in/agdelax">LinkedIn</a></p>
     </body>
 </html>
