--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </head>
     <body>
         <p class="smaller"><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></p>
-        <p id="text">I'm the founder of <a href="http://tokeninteractive.com">Token Interactive</a>&mdash;a games and interactive media studio. Before that I was the Lead Product Designer at <a href="http://stayawhile.com">Stayawhile</a> and <em>before that</em> I designed for a few New York City startups like <a href="http://artbinder.com">ArtBinder</a> and <a href="http://aliceapp.com">Alice</a>. Outside of work I like anime, craft beer, video/tabletop games and creepy stories.</p>
+        <p id="text">I'm the founder of <a href="http://tokeninteractive.com">Token Interactive</a>&mdash;a games and interactive media studio. Before that I was the Lead Product Designer at <a href="http://stayawhile.com">Stayawhile</a> and <em>before that</em> I designed for a few New York City startups like <a href="http://artbinder.com">ArtBinder</a> and <a href="http://aliceapp.com">Alice</a>. Outside of work I like anime, craft beer and video/tabletop games.</p>
         <p class="smaller"><a href="https://medium.com/@albertodelacruz">Medium</a>, <a href="http://twitter.com/agdelax">Twitter</a>, <a href="http://dribbble.com/albertosoft">Dribbble</a>, <a href="http://linkedin.com/in/agdelax">LinkedIn</a></p>
     </body>
 </html>
