--- a/oldv2/index.html
+++ b/oldv2/index.html
@@ -12,8 +12,8 @@
     <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
-    <script src="circletype.min.js"></script>
-    <script src="jquery.fittext.js"></script>
+    <script src="../circletype.min.js"></script>
+    <script src="../jquery.fittext.js"></script>
 
     <style type="text/css">
     body{
