--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <head>
         <title>(╯°□°）╯︵ ┻━┻</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="utf-8">
         <style type="text/css">
             body{
                 padding: 2vmin 1vmin 2vmin 2vmin;
@@ -28,6 +27,9 @@
             a:hover{
                 color: #FF2E5B;
                 transition: all 0.5s;
+            }
+            a:visited{
+            	color: #DADADA;
             }
             #text a{
                 line-height: 6vmin;
