--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -327,7 +327,7 @@
       <div id="linksdown">
         <p id="menubutton"><a class="contentlinks">Menu</a></p>
         <div id="navbox">
-        <p class="nav"><a class ="contentlinks" href="https://dribbble.com/albertosoft">Dribbble</a></p>
+        <p class="nav"><a class ="contentlinks" href="https://dribbble.com/TokenInteractive">Dribbble</a></p>
         <p class="dash">&mdash;</p>
         <p class="nav"><a class ="contentlinks" href="http://twitter.com/agdelax">Twitter</a></p>
         <p class="dash">&mdash;</p>
@@ -492,7 +492,7 @@
 
         // FOR DRIBBBLE
         var aboutLink = document.createElement('a');
-        aboutLink.href="https://dribbble.com/albertosoft";
+        aboutLink.href="https://dribbble.com/TokenInteractive";
         for(i=1; i<9; i++){
             var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
             aboutLink.appendChild(linkDiv);
