--- a/projects/stayawhile/index.html
+++ b/projects/stayawhile/index.html
@@ -121,7 +121,7 @@
 </head>
 <body>
       <div id="navbar"></div>
-      <a href="http://albertogui.com"><img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
+      <a href="http://albertogui.com/portfolio"><img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
       <div id="linksdown">
         <p id="menubutton"><a class="contentlinks">Menu</a></p>
         <div id="navbox">
