--- a/index.html
+++ b/index.html
@@ -329,11 +329,11 @@
         <div id="navbox">
         <p class="nav"><a class ="contentlinks" href="https://dribbble.com/TokenInteractive">Dribbble</a></p>
         <p class="dash">&mdash;</p>
-        <p class="nav"><a class ="contentlinks" href="http://twitter.com/agdelax">Twitter</a></p>
+        <p class="nav"><a class ="contentlinks" href="http://twitter.com/albertotoken">Twitter</a></p>
         <p class="dash">&mdash;</p>
         <p class="nav"><a class ="contentlinks" href="http://github.com/agdelax">Github</a></p>
         <p class="dash">&mdash;</p>
-        <p class="nav"><a class ="contentlinks" href="http://linkedin.com/in/agdelax">LinkedIn</a></p>
+        <p class="nav"><a class ="contentlinks" href="http://linkedin.com/in/albertotoken">LinkedIn</a></p>
         <p class="dash">&mdash;</p>
         <p class="nav"><a class ="contentlinks" href="https://medium.com/@albertodelacruz">Medium</a></p>
         <p class="dash">&mdash;</p>
@@ -501,7 +501,7 @@
 
         // FOR TWITTER
         var projectsLink = document.createElement('a');
-        projectsLink.href="http://twitter.com/agdelax";
+        projectsLink.href="http://twitter.com/albertotoken";
         for(i=11; i<19; i++){
             var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
             projectsLink.appendChild(linkDiv);
@@ -520,7 +520,7 @@
         
         // FOR LINKEDIN
         var twitterLink = document.createElement('a');
-        twitterLink.href="http://linkedin.com/in/agdelax";
+        twitterLink.href="http://linkedin.com/in/albertotoken";
         for(i=30; i<39; i++){
             var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
             twitterLink.appendChild(linkDiv);
