--- a/projects/stayabit/index.html
+++ b/projects/stayabit/index.html
@@ -122,17 +122,17 @@
 </head>
 <body>
       <div id="navbar"></div>
-      <a href="http://albertogui.com/portfolio"><img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
+      <a href="http://albertogui.com"><img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
       <div id="linksdown">
         <p id="menubutton"><a class="contentlinks">Menu</a></p>
         <div id="navbox">
-        <p class="nav"><a class ="contentlinks" href="https://dribbble.com/albertosoft">Dribbble</a></p>
+        <p class="nav"><a class ="contentlinks" href="https://dribbble.com/tokeninteractive">Dribbble</a></p>
         <p class="dash">&mdash;</p>
-        <p class="nav"><a class ="contentlinks" href="http://twitter.com/agdelax">Twitter</a></p>
+        <p class="nav"><a class ="contentlinks" href="http://twitter.com/albertotoken">Twitter</a></p>
         <p class="dash">&mdash;</p>
         <p class="nav"><a class ="contentlinks" href="http://github.com/agdelax">Github</a></p>
         <p class="dash">&mdash;</p>
-        <p class="nav"><a class ="contentlinks" href="http://linkedin.com/in/agdelax">LinkedIn</a></p>
+        <p class="nav"><a class ="contentlinks" href="http://linkedin.com/in/albertotoken">LinkedIn</a></p>
         <p class="dash">&mdash;</p>
         <p class="nav"><a class ="contentlinks" href="https://medium.com/@albertodelacruz">Medium</a></p>
         <p class="dash">&mdash;</p>
