--- a/test/index.html
+++ b/test/index.html
@@ -26,7 +26,8 @@
             padding: 10px;
             font-family: 'Helvetica Neue', 'Helvetica', sans-serif;
             color: #212328;
-            text-align: center;
+            width: 100%;
+            max-width: 800px;
         }
         .nav{
             display: inline-block;
