--- a/test/index.html
+++ b/test/index.html
@@ -20,7 +20,6 @@
             -webkit-align-items: center;
             width: calc(100vw - 20px);
             height: calc(100vh - 20px);
-            position: absolute;
             top: 0;
             left: 0;
             padding: 10px;
@@ -28,6 +27,7 @@
             color: #212328;
             width: 100%;
             max-width: 800px;
+            margin: auto;
         }
         .nav{
             display: inline-block;
@@ -38,8 +38,8 @@
 <body>
     <div id="center-box">
         <div>
-            <p>Alberto Guillermo de la Cruz</p>
-            <p>I am a technologist making experiences that delight, amaze and entertain.</p>
+            <p class="black">Alberto Guillermo de la Cruz</p>
+            <p class="bold">I am a technologist making experiences that delight, amaze and entertain.</p>
             <p>I'm the founder of Token Interactive and a teacher at Parsons School of Design. I believe in building applications that are both fun and approachable, where content always comes first. I've only worked at startups, doing everything I can to get the job done. I'm great at taking a project over from start to finish&mdash;feel free to reach out if you need someone like me working with you.</p>
             <p class="nav"><a class ="contentlinks" href="https://dribbble.com/TokenInteractive">Dribbble</a></p>
             <p class="nav"><a class ="contentlinks" href="http://twitter.com/albertotoken">Twitter</a></p>
