--- a/test/index.html
+++ b/test/index.html
@@ -40,13 +40,10 @@
         <div>
             <p class="black">Alberto Guillermo de la Cruz</p>
             <p class="bold">I am a technologist making experiences that delight, amaze and entertain.</p>
-            <p>I'm the founder of Token Interactive and a teacher at Parsons School of Design. I believe in building applications that are both fun and approachable, where content always comes first. I've only worked at startups, doing everything I can to get the job done. I'm great at taking a project over from start to finish&mdash;feel free to reach out if you need someone like me working with you.</p>
-            <p class="nav"><a class ="contentlinks" href="https://dribbble.com/TokenInteractive">Dribbble</a></p>
-            <p class="nav"><a class ="contentlinks" href="http://twitter.com/albertotoken">Twitter</a></p>
-            <p class="nav"><a class ="contentlinks" href="http://github.com/agdelax">Github</a></p>
-            <p class="nav"><a class ="contentlinks" href="http://linkedin.com/in/albertotoken">LinkedIn</a></p>
-            <p class="nav"><a class ="contentlinks" href="https://medium.com/@albertodelacruz">Medium</a></p>
-            <p class="nav"><a class ="contentlinks" href="mailto:agdelax@gmail.com">Email</a></li>
+            <p>I'm the founder of Token Interactive and a teacher at Parsons School of Design. I believe in building applications that are both fun and approachable, where content always comes first. Feel free to reach out to me on <a href="http://linkedin.com/in/albertotoken">Twitter</a>.</p>
+            <p class="nav">Projects</p>
+            <p class="nav">Writings</p>
+            <p class="nav">Resume</p>
         </div>
     </div>
 </body>
