--- a/test/index.html
+++ b/test/index.html
@@ -22,11 +22,10 @@
             height: calc(100vh - 20px);
             top: 0;
             left: 0;
-            padding: 10px;
             font-family: 'Helvetica Neue', 'Helvetica', sans-serif;
             color: #212328;
             width: 100%;
-            max-width: 800px;
+            max-width: 650px;
             margin: auto;
         }
         .nav{
@@ -39,7 +38,7 @@
     <div id="center-box">
         <div>
             <p class="black">Alberto Guillermo de la Cruz</p>
-            <p class="bold">I am a technologist making experiences that delight, amaze and entertain.</p>
+            <p class="bold">I am making experiences that delight, amaze and entertain.</p>
             <p>I'm the founder of Token Interactive and a teacher at Parsons School of Design. I believe in building applications that are both fun and approachable, where content always comes first. Feel free to reach out to me on <a href="http://linkedin.com/in/albertotoken">Twitter</a>.</p>
             <p class="nav">Projects</p>
             <p class="nav">Writings</p>
