--- a/test/index.html
+++ b/test/index.html
@@ -8,9 +8,12 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <title>Alberto Guillermo de la Cruz</title>
     <style type="text/css">
+        body{
+            font-family: 'Roboto Slab', serif;
+        }
         #center-box{
             display: flex;
             display: -webkit-flex;
@@ -22,15 +25,26 @@
             height: calc(100vh - 20px);
             top: 0;
             left: 0;
-            font-family: 'Helvetica Neue', 'Helvetica', sans-serif;
             color: #212328;
             width: 100%;
             max-width: 650px;
             margin: auto;
+            font-size: 1em;
         }
         .nav{
             display: inline-block;
             margin-right: 5px;
+        }
+        .black{
+            font-weight: 800;
+            font-size: 0.7em;
+        }
+        .bold{
+            font-weight: 600;
+            font-size: 1.4em;
+        }
+        a{
+            color: #4286f4;
         }
     </style>
 </head>
