--- a/test/index.html
+++ b/test/index.html
@@ -35,13 +35,18 @@
             display: inline-block;
             margin-right: 5px;
         }
-        .black{
+        .small-bold-text{
             font-weight: 800;
-            font-size: 0.7em;
+            font-size: 0.9em;
+            margin: 0;
         }
-        .bold{
+        .bold-text{
             font-weight: 600;
-            font-size: 1.4em;
+            font-size: 1.3em;
+            margin: 0;
+        }
+        .body-text{
+            margin: 0;
         }
         a{
             color: #4286f4;
@@ -51,12 +56,12 @@
 <body>
     <div id="center-box">
         <div>
-            <p class="black">Alberto Guillermo de la Cruz</p>
-            <p class="bold">I am making experiences that delight, amaze and entertain.</p>
-            <p>I'm the founder of <a href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a href="https://www.newschool.edu/parsons/">Parsons School of Design</a>. I believe in building applications that are both fun and approachable, where content always comes before form. Feel free to reach out to me on <a href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
-            <p class="nav">Projects</p>
-            <p class="nav">Writings</p>
-            <p class="nav">Resume</p>
+            <p class="small-bold-text">Alberto Guillermo de la Cruz</p>
+            <p class="bold-text">I am making experiences that delight, amaze and entertain.</p>
+            <p class="body-text">I'm the founder of <a href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a href="https://www.newschool.edu/parsons/">Parsons School of Design</a>. I believe in building applications that are both fun and approachable, where content always comes before form. Feel free to reach out to me on <a href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
+            <p class="nav small-bold-text">Projects</p>
+            <p class="nav small-bold-text">Writings</p>
+            <p class="nav small-bold-text">Resume</p>
         </div>
     </div>
 </body>
