--- a/test/index.html
+++ b/test/index.html
@@ -33,7 +33,6 @@
         }
         .nav{
             display: inline-block;
-            margin-right: 5px;
         }
         .small-bold-text{
             font-weight: 800;
@@ -46,7 +45,7 @@
             margin: 0;
         }
         .body-text{
-            margin: 0;
+            margin: 10px 5px 0 0;
         }
         a{
             color: #4286f4;
