--- a/test/index.html
+++ b/test/index.html
@@ -33,19 +33,20 @@
         }
         .nav{
             display: inline-block;
+            margin: 10px 5px 0;
         }
         .small-bold-text{
             font-weight: 800;
-            font-size: 0.9em;
-            margin: 0;
+            font-size: 1em;
+            margin: 5px 0;
         }
         .bold-text{
             font-weight: 600;
-            font-size: 1.3em;
-            margin: 0;
+            font-size: 2em;
+            margin: 5px 0;
         }
         .body-text{
-            margin: 10px 5px 0 0;
+            margin: 10px 0;
         }
         a{
             color: #4286f4;
