--- a/test/index.html
+++ b/test/index.html
@@ -61,9 +61,9 @@
             <p class="small-bold-text">Alberto Guillermo de la Cruz</p>
             <p class="bold-text">I am making experiences that delight, amaze and entertain.</p>
             <p class="body-text">I'm the founder of <a href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a href="https://www.newschool.edu/parsons/">Parsons School of Design</a>. I believe in building applications that are both fun and approachable, where content always comes before form. Feel free to reach out to me on <a href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
-            <p class="nav">Projects</p>
-            <p class="nav">Writings</p>
-            <p class="nav">Resume</p>
+            <p class="nav"><a href="#">Projects</a></p>
+            <p class="nav"><a href="#">Writings</a></p>
+            <p class="nav"><a href="#">Resume</a></p>
         </div>
     </div>
 </body>
