--- a/test/index.html
+++ b/test/index.html
@@ -35,7 +35,7 @@
             display: inline-block;
             font-weight: 800;
             font-size: 1em;
-            margin: 10px 10px 0;
+            margin: 10px 10px 0 0;
         }
         .small-bold-text{
             font-weight: 800;
