--- a/test/index.html
+++ b/test/index.html
@@ -36,6 +36,7 @@
             font-weight: 800;
             font-size: 1em;
             margin: 10px 10px 0 0;
+            text-decoration: none;
         }
         .small-bold-text{
             font-weight: 800;
