--- a/test/index.html
+++ b/test/index.html
@@ -31,12 +31,14 @@
             margin: auto;
             font-size: 1em;
         }
+        a#center-box{
+            text-decoration: underline;
+        }
         .nav{
             display: inline-block;
             font-weight: 800;
             font-size: 1em;
             margin: 10px 10px 0 0;
-            text-decoration: none;
         }
         .small-bold-text{
             font-weight: 800;
@@ -53,6 +55,7 @@
         }
         a{
             color: #4286f4;
+            text-decoration: none;
         }
     </style>
 </head>
