--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,7 @@
     <style type="text/css">
         body{
             font-family: 'Roboto Slab', serif;
+            color: #212121;
         }
         #center-box{
             display: flex;
@@ -25,7 +26,6 @@
             height: calc(100vh - 20px);
             top: 0;
             left: 0;
-            color: #212328;
             width: 100%;
             max-width: 650px;
             margin: auto;
@@ -63,7 +63,7 @@
     <div id="center-box">
         <div>
             <p class="small-bold-text">Alberto Guillermo de la Cruz</p>
-            <p class="bold-text">I am making experiences that delight, amaze and entertain.</p>
+            <p class="bold-text">I am making experiences that delight, amaze, and entertain.</p>
             <p class="body-text">I'm the founder of <a href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a href="https://www.newschool.edu/parsons/">Parsons School of Design</a>. I believe in building applications that are both fun and approachable, where content always comes before form. Feel free to reach out to me on <a href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
             <p class="nav"><a href="#">Projects</a></p>
             <p class="nav"><a href="#">Writings</a></p>
