--- a/test/index.html
+++ b/test/index.html
@@ -32,7 +32,7 @@
             font-size: 1em;
         }
         a#center-box{
-            text-decoration: underline;
+            text-decoration: underline !important;
         }
         .nav{
             display: inline-block;
