--- a/test/index.html
+++ b/test/index.html
@@ -36,7 +36,7 @@
             font-weight: 800;
             font-size: 1em;
             margin: 5px 10px 0 0;
-            text-decoration: none;
+            text-decoration: none !important;
         }
         .small-bold-text{
             font-weight: 800;
