--- a/test/index.html
+++ b/test/index.html
@@ -37,9 +37,6 @@
             font-size: 1em;
             margin: 5px 10px 0 0;
         }
-        a .nav{
-            text-decoration: none;
-        }
         .small-bold-text{
             font-weight: 800;
             font-size: 1em;
@@ -53,8 +50,12 @@
         .body-text{
             margin: 10px 0;
         }
+        .hyperlink{
+            text-decoration: none;
+        }
         a{
             color: #4286f4;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -63,7 +64,7 @@
         <div>
             <p class="small-bold-text">Alberto Guillermo de la Cruz</p>
             <p class="bold-text">I am making experiences that delight, amaze, and entertain.</p>
-            <p class="body-text">I'm the founder of <a href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a href="https://www.newschool.edu/parsons/">Parsons School of Design</a>. I believe in building applications that are both fun and approachable, where content always comes before form. Feel free to reach out to me on <a href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
+            <p class="body-text">I'm the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a class="hyperlink" href="https://www.newschool.edu/parsons/">Parsons School of Design</a>. I believe in building applications that are both fun and approachable, where content always comes before form. Feel free to reach out to me on <a class="hyperlink" href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
             <p class="nav"><a href="#">Projects</a></p>
             <p class="nav"><a href="#">Writings</a></p>
             <p class="nav"><a href="#">Resume</a></p>
