--- a/test/index.html
+++ b/test/index.html
@@ -51,7 +51,7 @@
             margin: 10px 0;
         }
         .hyperlink{
-            text-decoration: none;
+            text-decoration: underline;
         }
         a{
             color: #4286f4;
