--- a/test/index.html
+++ b/test/index.html
@@ -22,8 +22,8 @@
             -webkit-justify-content: center;
             align-items: center;
             -webkit-align-items: center;
-            width: calc(100vw - 20px);
-            height: calc(100vh - 20px);
+            width: 100vw;
+            height: 100vh;
             top: 0;
             left: 0;
             width: 100%;
