--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
             align-items: center;
             -webkit-align-items: center;
             width: 100vw;
-            height: 100vh;
+            height: calc(100vh - 20px);
             top: 0;
             left: 0;
             width: 100%;
