--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
     <title>Alberto Guillermo de la Cruz</title>
     <style type="text/css">
         body{
@@ -33,17 +33,17 @@
         }
         .nav{
             display: inline-block;
-            font-weight: 800;
+            font-weight: 700;
             font-size: 1em;
             margin: 5px 10px 0 0;
         }
         .small-bold-text{
-            font-weight: 800;
+            font-weight: 700;
             font-size: 1em;
             margin: 5px 0;
         }
         .bold-text{
-            font-weight: 600;
+            font-weight: 400;
             font-size: 2em;
             margin: 5px 0;
         }
