--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="style.css"/
+    <link type="text/css" rel="stylesheet" href="style.css">
     <title>Alberto Guillermo de la Cruz</title>
 </head>
 <body>
