--- a/writings/index.html
+++ b/writings/index.html
@@ -4,7 +4,15 @@
     <meta charset="utf-8">
   </head>
   <body>
-    
+    <!DOCTYPE html>
+<html>
+<head>
+    <title>Writings&mdash;Alberto G. de la Cruz</title>
+</head>
+<body>
+
+</body>
+</html>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
