--- a/projects/creepypasta/index.html
+++ b/projects/creepypasta/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="../style.css">
   </head>
   <body>
     <head>
