--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,7 @@
         <p class="bold-text">I am making experiences that delight, amaze, and entertain.</p>
         <p class="body-text">I'm the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a class="hyperlink" href="https://www.newschool.edu/">The New School</a>. I believe in building applications that are both fun and approachable, where content always comes before form. Feel free to reach out to me on <a class="hyperlink" href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
         <p class="nav"><a href="#">Projects</a></p>
-        <p class="nav"><a href="#">Writings</a></p>
+        <p class="nav"><a href="/writings">Writings</a></p>
         <p class="nav"><a href="#">Resume</a></p>
     </div>
 </div>
