--- a/writings/index.html
+++ b/writings/index.html
@@ -7,15 +7,11 @@
     <link type="text/css" rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <!DOCTYPE html>
-<html>
-<head>
     <title>Writings&mdash;Alberto G. de la Cruz</title>
-</head>
-<body>
-
-</body>
-</html>
+<div class="heading-container">
+    <p class="small-bold-text">Alberto Guillermo de la Cruz</p>
+    <h1>Writings</h1>
+</div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
