--- a/writings/index.html
+++ b/writings/index.html
@@ -10,7 +10,7 @@
     <title>Writings&mdash;Alberto G. de la Cruz</title>
 <div class="heading-container">
     <p class="small-bold-text">Alberto Guillermo de la Cruz</p>
-    <h1>Writings</h1>
+    <p class="bold-text">Writings</p>
 </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
