--- a/writings/index.html
+++ b/writings/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <title>Writings&mdash;Alberto G. de la Cruz</title>
-<div class="heading-container">
-    <p class="small-bold-text">Alberto Guillermo de la Cruz</p>
-    <p class="bold-text">Writings</p>
+<div class="main-container">
+    <div class="heading-container">
+        <p class="small-bold-text">Alberto Guillermo de la Cruz</p>
+        <p class="bold-text">Writings</p>
+    </div>
 </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
