--- a/test/index.html
+++ b/test/index.html
@@ -13,20 +13,10 @@
         <p class="small-bold-text">Alberto Guillermo de la Cruz</p>
         <p class="bold-text">I am making experiences that delight, amaze, and entertain.</p>
         <p class="body-text">I'm the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a class="hyperlink" href="https://www.newschool.edu/">The New School</a>. I believe in building applications that are both fun and approachable, where content always comes before form. Feel free to reach out to me on <a class="hyperlink" href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
-        <p class="nav"><a href="#">Projects</a></p>
+        <p class="nav"><a href="/projects">Projects</a></p>
         <p class="nav"><a href="/writings">Writings</a></p>
         <p class="nav"><a href="#">Resume</a></p>
     </div>
 </div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-65309658-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
   </body>
 </html>
