--- a/test/index.html
+++ b/test/index.html
@@ -14,8 +14,9 @@
         <p class="bold-text">I am making experiences that delight, amaze, and entertain.</p>
         <p class="body-text">I'm the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a class="hyperlink" href="https://www.newschool.edu/">The New School</a>. I believe in building applications that are both fun and approachable, where content always comes before form. Feel free to reach out to me on <a class="hyperlink" href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
         <p class="nav"><a href="/projects">Projects</a></p>
-        <p class="nav"><a href="/writings">Writings</a></p>
-        <p class="nav"><a href="#">Resume</a></p>
+        <p class="nav"><a href="https://medium.com/@albertodelacruz">Writings</a></p>
+        <p class="nav"><a href="http://linkedin.com/in/albertotoken">Experience</a></p>
+        <p class="nav"><a href="mailto:agdelax@gmail.com">Email</a></p>
     </div>
 </div>
   </body>
