--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link type="text/css" rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <title>Alberto G. de la Cruz</title>
+    <title>Alberto de la Cruz</title>
 <div id="center-box">
     <div>
-        <p class="small-bold-text">Alberto G. de la Cruz</p>
+        <p class="small-bold-text">Alberto de la Cruz</p>
         <p class="bold-text">I am making experiences that delight, amaze, and entertain.</p>
         <p class="body-text">I'm the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a class="hyperlink" href="https://www.newschool.edu/">The New School</a>. I believe in building applications that are both fun and approachable, where content always comes before form. Feel free to reach out to me on <a class="hyperlink" href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
     </div>
