--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="center-box">
     <div>
         <p class="small-bold-text">Alberto de la Cruz</p>
-        <p class="bold-text">I am making experiences that delight, amaze, and entertain.</p>
+        <p class="bold-text">My name is Alberto de la Cruz. I produce mobile games that focus on fun and gratification. My approach is design driven and user focused.</p>
         <p class="body-text">I'm the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a class="hyperlink" href="https://www.newschool.edu/">The New School</a>. I believe in building applications that are both fun and approachable, where content always comes before form. Feel free to reach out to me on <a class="hyperlink" href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
     </div>
 </div>
