--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -327,13 +327,13 @@
       <div id="linksdown">
         <p id="menubutton"><a class="contentlinks">Menu</a></p>
         <div id="navbox">
-        <p class="nav"><a class ="contentlinks" href="https://dribbble.com/TokenInteractive">Dribbble</a></p>
+        <p class="nav"><a class ="contentlinks" href="https://dribbble.com/albertotoken">Dribbble</a></p>
         <p class="dash">&mdash;</p>
-        <p class="nav"><a class ="contentlinks" href="http://twitter.com/agdelax">Twitter</a></p>
+        <p class="nav"><a class ="contentlinks" href="http://twitter.com/albertotoken">Twitter</a></p>
         <p class="dash">&mdash;</p>
         <p class="nav"><a class ="contentlinks" href="http://github.com/agdelax">Github</a></p>
         <p class="dash">&mdash;</p>
-        <p class="nav"><a class ="contentlinks" href="http://linkedin.com/in/agdelax">LinkedIn</a></p>
+        <p class="nav"><a class ="contentlinks" href="http://linkedin.com/in/albertotoken">LinkedIn</a></p>
         <p class="dash">&mdash;</p>
         <p class="nav"><a class ="contentlinks" href="https://medium.com/@albertodelacruz">Medium</a></p>
         <p class="dash">&mdash;</p>
