--- a/projects/divpixels/index.html
+++ b/projects/divpixels/index.html
@@ -120,7 +120,7 @@
 				<input type="checkbox" id="myCheck" checked><p id='gridlabel'>Gridlines</p>
 			</div>
 			<h3>Built in a weekend by</h3>
-			<a href="http://albertogui.com"><img id= "face" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
+			<a href="http://albertodelacruz.io/portfolio"><img id= "face" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
 			<p>Color picker by <a href="http://jscolor.com">jscolor</a>	</p>
 		</div>
 	</div>
