--- a/projects/whitewithred/index.html
+++ b/projects/whitewithred/index.html
@@ -55,7 +55,7 @@
 	<div id="titlediv">
 		<p>White with Red</p>
 		<p>Author Unknown</p>
-		<p>Illustrations by <a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></p>
+		<p>Illustrations by <a href="http://albertodelacruz.io/portfolio">Alberto Guillermo de la Cruz</a></p>
 	</div>	
 	<svg onclick="blink()" height="400" width="550">
 		<defs>
