--- a/projects/creepypasta/index.html
+++ b/projects/creepypasta/index.html
@@ -131,11 +131,11 @@
 </head>
 <body>
       <div id="navbar"></div>
-      <a href="http://albertogui.com"><img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
+      <a href="http://albertodelacruz.io/portfolio"><img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
       <div id="linksdown">
         <p id="menubutton"><a class="contentlinks">Menu</a></p>
         <div id="navbox">
-        <p class="nav"><a class ="contentlinks" href="https://dribbble.com/tokeninteractive">Dribbble</a></p>
+        <p class="nav"><a class ="contentlinks" href="https://dribbble.com/albertotoken">Dribbble</a></p>
         <p class="dash">&mdash;</p>
         <p class="nav"><a class ="contentlinks" href="http://twitter.com/albertotoken">Twitter</a></p>
         <p class="dash">&mdash;</p>
