--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,6 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="../style.css">
+  </head>
+  <body>
+    <!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
   </head>
   <body>
     <!DOCTYPE html>
@@ -560,5 +569,7 @@
       ga('send', 'pageview');
 
     </script>
+  </body>
+</html>
   </body>
 </html>
