--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -501,7 +501,7 @@
 
         // FOR DRIBBBLE
         var aboutLink = document.createElement('a');
-        aboutLink.href="https://dribbble.com/TokenInteractive";
+        aboutLink.href="https://dribbble.com/albertotoken";
         for(i=1; i<9; i++){
             var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
             aboutLink.appendChild(linkDiv);
@@ -510,7 +510,7 @@
 
         // FOR TWITTER
         var projectsLink = document.createElement('a');
-        projectsLink.href="http://twitter.com/agdelax";
+        projectsLink.href="http://twitter.com/albertotoken";
         for(i=11; i<19; i++){
             var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
             projectsLink.appendChild(linkDiv);
@@ -529,7 +529,7 @@
         
         // FOR LINKEDIN
         var twitterLink = document.createElement('a');
-        twitterLink.href="http://linkedin.com/in/agdelax";
+        twitterLink.href="http://linkedin.com/in/albertotoken";
         for(i=30; i<39; i++){
             var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
             twitterLink.appendChild(linkDiv);
