--- a/projects/creepypasta/index.html
+++ b/projects/creepypasta/index.html
@@ -203,7 +203,7 @@
     <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/white-with-red.gif" class="creepypicture">
   </div>
 </div>
-
+<p>Creepypasta Stickers is currently one of the top 150 iMessage apps globally.</p>
 <p>Be sure to check out the app <a class ="contentlinks" href="https://itunes.apple.com/us/app/creepypasta-stickers/id1299579002">here</a>.</p>
 </div>
 
