--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="center-box">
     <div>
         <!-- <p class="small-bold-text">Alberto de la Cruz</p> -->
-        <p class="bold-text">My name is Alberto de la Cruz. I produce mobile games that focus on fun and gratification.</p>
+        <p class="bold-text">My name is Alberto de la Cruz. <br>I produce mobile games that focus on fun and gratification.</p>
         <p class="body-text">I'm the founder of <a class="hyperlink" href="http://tokeninteractive.com">Token Interactive</a> and a teacher at <a href="https://www.newschool.edu/parsons/" class="hyperlink">Parsons School of Design</a>. I believe in building applications that are both fun and approachable, where every decision is driven by design and player satisfaction. Feel free to reach out to me on <a class="hyperlink" href="https://twitter.com/AlbertoToken">Twitter</a>.</p>
     </div>
 </div>
