--- a/projects/creepypasta/index.html
+++ b/projects/creepypasta/index.html
@@ -15,7 +15,7 @@
   <link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
-  <script src="http://circletype.labwire.ca/js/circletype.js"></script>
+  <script src="https://circletype.labwire.ca/js/circletype.js"></script>
   <style type="text/css">
   body{
     background-color: white;
