--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,7 +50,7 @@
     #content {
     position:relative; 
     /*top:105%; */
-    max-width: 99%;
+    max-width: calc(100% - 30px);
     margin: auto;
     font-size: 1.5em;
     padding: 0 15px 30px 0px;
