--- a/projects/stayawhile/index.html
+++ b/projects/stayawhile/index.html
@@ -124,17 +124,17 @@
 </head>
 <body>
       <div id="navbar"></div>
-      <a href="http://albertodelacruz.io/portfolio"><img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
+      <a href="https://albertodelacruz.io/portfolio"><img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
       <div id="linksdown">
         <p id="menubutton"><a class="contentlinks">Menu</a></p>
         <div id="navbox">
         <p class="nav"><a class ="contentlinks" href="https://dribbble.com/albertotoken">Dribbble</a></p>
         <p class="dash">&mdash;</p>
-        <p class="nav"><a class ="contentlinks" href="http://twitter.com/albertotoken">Twitter</a></p>
+        <p class="nav"><a class ="contentlinks" href="https://twitter.com/albertotoken">Twitter</a></p>
         <p class="dash">&mdash;</p>
-        <p class="nav"><a class ="contentlinks" href="http://github.com/agdelax">Github</a></p>
+        <p class="nav"><a class ="contentlinks" href="https://github.com/agdelax">Github</a></p>
         <p class="dash">&mdash;</p>
-        <p class="nav"><a class ="contentlinks" href="http://linkedin.com/in/albertotoken">LinkedIn</a></p>
+        <p class="nav"><a class ="contentlinks" href="https://linkedin.com/in/albertotoken">LinkedIn</a></p>
         <p class="dash">&mdash;</p>
         <p class="nav"><a class ="contentlinks" href="https://medium.com/@albertodelacruz">Medium</a></p>
         <p class="dash">&mdash;</p>
