--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -32,6 +32,8 @@
         position: absolute;
         overflow-x: hidden;
         font-family: 'Helvetica Neue', sans-serif;
+        margin: 0;
+        padding: 0;
     }
 
     .container{
