--- a/projects/whitewithred/index.html
+++ b/projects/whitewithred/index.html
@@ -20,6 +20,7 @@
 		background-color: black;
 		text-align: center;
 		padding: 0;
+		margin: 0;
 	}
 	p {
 		color: #ccc;
@@ -55,7 +56,7 @@
 	<div id="titlediv">
 		<p>White with Red</p>
 		<p>Author Unknown</p>
-		<p>Illustrations by <a href="http://albertodelacruz.io/portfolio">Alberto Guillermo de la Cruz</a></p>
+		<p>Illustrations by <a href="https://albertodelacruz.io/portfolio">Alberto Guillermo de la Cruz</a></p>
 	</div>	
 	<svg onclick="blink()" height="400" width="550">
 		<defs>
