--- a/projects/golden-dragon/index.html
+++ b/projects/golden-dragon/index.html
@@ -24,6 +24,8 @@
     position: absolute;
     overflow-x: hidden;
     font-family: 'Helvetica Neue', sans-serif;
+    margin: 0;
+        padding: 0;
   }
     .img-container{
       position: relative;
