--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@
     <!DOCTYPE html>
 <html>
 <head>
-    <title>Alberto G. de la Cruz</title>
+    <title>Alberto de la Cruz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
