--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             <p class="body-text"><a class="hyperlink" href="https://dribbble.com/albertotoken">Dribbble</a></p>
         </div>
     </div>
+    <p class="bold-text">Thank you for stopping by!</p>
 </div>
   </body>
 </html>
